--- a/.github/workflows/my-test-api-pipeline.yml
+++ b/.github/workflows/my-test-api-pipeline.yml
@@ -22,6 +22,8 @@ jobs:
         run: echo "Hello WORLD from TESTING"
       - name: Install Newman
         run: npm install newman
+      - name: Test Bash Script
+        run: newman run my-api-test-postman.postman_test_run.json
   
   my-deploy:
     runs-on: ubuntu-latest
