--- a/.github/workflows/my-test-api-pipeline.yml
+++ b/.github/workflows/my-test-api-pipeline.yml
@@ -20,13 +20,20 @@ jobs:
     steps:
       - name: Print Hello
         run: echo "Hello WORLD from TESTING"
+      
       - name: Install Newman
         run: npm install newman
 #       - name: Test Bash Script
 #         run: newman run my-api-test-postman.postman_test_run.json
+      
       - name: List current folder
         run: ls -la
-  
+      
+      - name: GIT CLONE my Repo
+        uses: action/checkout@v1
+      
+      - name: List current folder
+        run: ls -la
   my-deploy:
     runs-on: ubuntu-latest
     needs: [my-testing]
