--- a/.github/workflows/my-test-api-pipeline.yml
+++ b/.github/workflows/my-test-api-pipeline.yml
@@ -30,7 +30,7 @@ jobs:
         run: ls -la
       
       - name: GIT CLONE my Repo
-        uses: action/checkout@v1
+        uses: actions/checkout@v1
       
       - name: List current folder
         run: ls -la
