--- a/.github/workflows/my-test-api-pipeline.yml
+++ b/.github/workflows/my-test-api-pipeline.yml
@@ -34,7 +34,7 @@ jobs:
         run: ls -la
       
       - name: Test API by NEWMAN
-        run: newman run my-api-test-postman.postman_test_run.json
+        run: newman run my-api-test-postman.postman_collection.json
   my-deploy:
     runs-on: ubuntu-latest
     needs: [my-testing]
