--- a/.github/workflows/my-test-api-pipeline.yml
+++ b/.github/workflows/my-test-api-pipeline.yml
@@ -22,7 +22,12 @@ jobs:
         run: echo "Hello WORLD from TESTING"
       
       - name: Install Newman
-        run: npm install newman
+        run: npm install -g newman
+      - name: Install Newman Reporter
+        run: npm install -g newman-reporter-htmlextra
+      - name: install newman-reporter-htmlextra
+        run: npm install -S newman-reporter-htmlextra
+
       
       - name: List current folder
         run: ls -la
@@ -34,7 +39,7 @@ jobs:
         run: ls -la
       
       - name: Test API by NEWMAN
-        run: newman run my-api-test-postman.postman_collection.json
+        run: newman run my-api-test-postman.postman_collection.json -r htmlextra --reporter-htmlextra-export ./results/report.html
   my-deploy:
     runs-on: ubuntu-latest
     needs: [my-testing]
