--- a/.github/workflows/my-test-api-pipeline.yml
+++ b/.github/workflows/my-test-api-pipeline.yml
@@ -5,9 +5,9 @@ name: CI-Testing
 # events but only for the main branch
 on:
   push:
-    branches: [ main ]
+    branches: [ gh-pages ]
   pull_request:
-    branches: [ main ]
+    branches: [ gh-pages ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
