--- a/.github/workflows/my-test-api-pipeline.yml
+++ b/.github/workflows/my-test-api-pipeline.yml
@@ -37,10 +37,17 @@ jobs:
         uses: actions/checkout@v1
       
       - name: List current folder
-        run: ls -la
-      
+        run: |
+          ls -la
+          mkdir ./results
+          ls -la 
       - name: Test API by NEWMAN
         run: newman run my-api-test-postman.postman_collection.json -r htmlextra --reporter-htmlextra-export ./results/report.html
+      - name: Archive results
+        uses: actions/upload-artifact@v2
+        with:
+          name: results
+          path: .results/report.html
   my-deploy:
     runs-on: ubuntu-latest
     needs: [my-testing]
