--- a/.github/workflows/my-test-api-pipeline.yml
+++ b/.github/workflows/my-test-api-pipeline.yml
@@ -54,5 +54,9 @@ jobs:
     steps:
       - name: Print Hello
         run: echo "HEllO WORLD from DEPLOY"
+      - name: Download a single artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: results
     
 
