--- a/.github/workflows/my-test-api-pipeline.yml
+++ b/.github/workflows/my-test-api-pipeline.yml
@@ -42,12 +42,12 @@ jobs:
           mkdir ./results
           ls -la 
       - name: Test API by NEWMAN
-        run: newman run my-api-test-postman.postman_collection.json -r htmlextra --reporter-htmlextra-export ./results/report.html
+        run: newman run my-api-test-postman.postman_collection.json -r htmlextra --reporter-htmlextra-export report.html
       - name: Archive results
         uses: actions/upload-artifact@v2
         with:
           name: results
-          path: .results/report.html
+          path: report.html
   my-deploy:
     runs-on: ubuntu-latest
     needs: [my-testing]
