--- a/.github/workflows/my-test-api-pipeline.yml
+++ b/.github/workflows/my-test-api-pipeline.yml
@@ -22,13 +22,10 @@ jobs:
         run: echo "Hello WORLD from TESTING"
       
       - name: Install Newman
-        run: npm install newman
+        run: npm install -g newman
       
       - name: Install Newman Reporter
-        run: npm install newman-reporter-htmlextra
-      
-      - name: install newman-reporter-htmlextra
-        run: npm install newman-reporter-htmlextra
+        run: npm install -g newman-reporter-htmlextra
 
       - name: List current folder
         run: ls -la
